# fund

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/web/: +server.ts  .dev.vars.example  .env.example  .gitignore  AGENTS.md  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/web/.storybook/: main.ts  preview.tsx
apps/web/components/: ChatApp.tsx  Shell.tsx  ThemeToggle.tsx
apps/web/lib/: env.ts  query-client.ts
apps/web/pages/: +Head.tsx  +Layout.tsx  +config.ts  +onPageTransitionEnd.ts  tailwind.css  (+1 more)
content/research/: _template.md  akashml.md  altseason-is-dead.md  bribes-depends-crv-price.md  convex.md  curve-llamalend.md  curve.md  cvx-crv-flywheel.md  fxswap-new-curve-liquidity-pools.md  gram-ton-overview.md  pendle.md  stakedao.md  yield-basis-hybrid-vaults.md  yield-basis-overview.md  zunami-hack-postmortem.md
docs/: coinstats-web-api.md  langsmith.md  research-ingest.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_document_archived_at.py  003_document_catalog.py  004_document_versioning.py  005_transactions_price_history.py  006_seed_zun_prices.py
scripts/: seed_demo.py
services/api/: pyproject.toml
services/api/src/api/: __init__.py  access.py  agent.py  graph.py  main.py  policy.py  tools.py
tests/: conftest.py  test_access_failclosed.py  test_coinstats_web_parse.py  test_frontmatter.py  test_history_messages.py  test_rag_archive.py  test_rag_ingest_catalog.py  test_sheet_parse.py  test_transactions_parse.py
(+22 files in other folders)
